--- a/styles/LandingPage.module.scss
+++ b/styles/LandingPage.module.scss
@@ -35,6 +35,11 @@
     position: unset;
     order: -1;
   }
+
+  @media(max-width: 640px) {
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
 
 .text-container {
@@ -142,10 +147,6 @@
     top: 45%;
     left: 50%;
     translate: -50% -50%;
-  }
-
-  @media(max-width: 460px) {
-    top: 43%;
   }
 
   .animation{
