--- a/styles/SignUpPage.module.scss
+++ b/styles/SignUpPage.module.scss
@@ -1,8 +1,33 @@
+.root {
+    height: var(--app-height);
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10rem;
+    padding: 2rem;
+  
+    @media(max-width: 1550px) {
+      gap: 4rem;
+    }
+  
+    @media(max-width: 1200px) {
+      gap: 0;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+  
+    @media(max-width: 470px) {
+      padding: 2rem 1.5rem 3rem 1.5rem;
+    }
+  }
+
 .sign-in-button {
     margin-top: 2rem;
     padding: 1rem 2rem;
     width: 100%;
-    background-color: var(--primary-blue);
+    background-color: var(--inactive-blue);
     color: var(--white);
     font-size: 1.1rem;
     letter-spacing: 1px;
@@ -13,4 +38,11 @@
     border-radius: 6px;
     transition: 250ms;
     border: none;
+
+    &:hover {
+        cursor: pointer;
+        background-color: var(--dark-blue);
+    }
+    
 }
+
