--- a/styles/SignUpPage.module.scss
+++ b/styles/SignUpPage.module.scss
@@ -7,6 +7,7 @@
     flex-direction: column;
     gap: 10rem;
     padding: 2rem;
+ 
   
     @media(max-width: 1550px) {
       gap: 4rem;
@@ -23,6 +24,7 @@
     }
   }
 
+
 .sign-in-button {
     margin-top: 2rem;
     padding: 1rem 2rem;
@@ -34,15 +36,16 @@
     font-weight: 500;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     border-radius: 6px;
     transition: 250ms;
     border: none;
+    justify-content: center;
+    
 
     &:hover {
         cursor: pointer;
         background-color: var(--dark-blue);
+        }
     }
-    
-}
+
 
