added more styling

--- a/styles/SignUpPage.module.scss
+++ b/styles/SignUpPage.module.scss
@@ -74,4 +74,15 @@
         }
     }
 
+    .confirm-container {
+      
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 20rem;
+      width: 50%;
+      background-color: #263245;
+    }
+
 
