--- a/styles/SignUpPage.module.scss
+++ b/styles/SignUpPage.module.scss
@@ -74,7 +74,7 @@
         }
     }
 
-    .confirm-container {
+    .confirm-text-container {
       
       display: flex;
       flex-direction: row;
