added more styling

--- a/styles/SignUpPage.module.scss
+++ b/styles/SignUpPage.module.scss
@@ -74,6 +74,19 @@
         }
     }
 
+    .confirm-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+    }
+
+    .confirm-h1 {
+      display: flex;
+      
+    }
+
     .confirm-text-container {
       
       display: flex;
