added small styling for confirm border

--- a/styles/SignUpPage.module.scss
+++ b/styles/SignUpPage.module.scss
@@ -84,7 +84,7 @@
 
     .confirm-h1 {
       display: flex;
-      
+
     }
 
     .confirm-text-container {
@@ -96,6 +96,7 @@
       height: 16rem;
       width: 40%;
       gap: 2.5rem;
+      border-radius: 6px;
       background-color: #263245;
     }
 
