--- a/styles/SignUpPage.module.scss
+++ b/styles/SignUpPage.module.scss
@@ -80,24 +80,35 @@
       align-items: center;
       justify-content: center;
       width: 100%;
+
+      .confirm-h1 {
+        display: flex;
+  
+      }
+
+      .confirm-text-container {
+        padding: 2rem;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 2.5rem;
+        border-radius: 6px;
+        background-color: #263245;
+  
+        
+      }
+
+      @media(max-width: 1200px) {
+        position: unset;
+        order: -1;
+      }
+    
+      @media(max-width: 640px) {
+        flex-direction: column;
+        gap: 1rem;
+      }
     }
 
-    .confirm-h1 {
-      display: flex;
-
-    }
-
-    .confirm-text-container {
-      
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
-      height: 16rem;
-      width: 40%;
-      gap: 2.5rem;
-      border-radius: 6px;
-      background-color: #263245;
-    }
 
 
