added more styling for input

--- a/styles/GoalPage.module.scss
+++ b/styles/GoalPage.module.scss
@@ -44,3 +44,25 @@
       gap: 1rem;
     }
 }
+
+.sign-in-button {
+    margin-top: 2rem;
+    padding: 1rem 2rem;
+    width: 100%;
+    background-color: var(--inactive-blue);
+    color: var(--white);
+    font-size: 1.1rem;
+    letter-spacing: 1px;
+    font-weight: 500;
+    display: flex;
+    border-radius: 6px;
+    transition: 250ms;
+    border: none;
+    justify-content: center;
+    
+
+    &:hover {
+        cursor: pointer;
+        background-color: var(--dark-blue);
+        }
+    }
