added border + styling

--- a/styles/SignUpPage.module.scss
+++ b/styles/SignUpPage.module.scss
@@ -110,5 +110,13 @@
       }
     }
 
+    .goal-container {
+      padding: 2rem;
+      border-color: white;
+      border-radius: 6px;
+      display: flex;
+      flex-direction: column;
+
+    }
 
 
