--- a/styles/SignUpPage.module.scss
+++ b/styles/SignUpPage.module.scss
@@ -112,7 +112,7 @@
 
     .goal-container {
       padding: 2rem;
-      border: solid 4px white;
+      border-style: solid 4px white;
       border-color: white;
       border-radius: 6px;
       display: flex;
