--- a/styles/GoalPage.module.scss
+++ b/styles/GoalPage.module.scss
@@ -66,3 +66,14 @@
         background-color: var(--dark-blue);
         }
     }
+
+    .goal-container {
+        padding: 2rem;
+        border-style: solid 4px white;
+        border-color: white;
+        border-radius: 6px;
+        display: flex;
+        flex-direction: column;
+  
+      }
+  
