--- a/styles/GoalPage.module.scss
+++ b/styles/GoalPage.module.scss
@@ -45,6 +45,28 @@
     }
 }
 
+.logout-button {
+  margin-top: 2rem;
+  padding: 1rem 2rem;
+  width: 100%;
+  background-color: var(--primary-blue);
+  color: var(--white);
+  font-size: 1.1rem;
+  letter-spacing: 1px;
+  font-weight: 500;
+  display: flex;
+  border-radius: 6px;
+  transition: 250ms;
+  border: none;
+  justify-content: center;
+
+  &:hover {
+    cursor: pointer;
+    background-color: var(--dark-blue);
+    }
+
+}
+
 .sign-in-button {
     margin-top: 2rem;
     padding: 1rem 2rem;
