--- a/styles/GoalPage.module.scss
+++ b/styles/GoalPage.module.scss
@@ -90,13 +90,16 @@
     }
 
     .goal-container {
-        padding: 2rem;
-        border-style: solid 4px white;
-        border-color: white;
-        border-radius: 6px;
-        display: flex;
-        flex-direction: column;
-      
-  
-      }
+      margin-top: 2rem;
+      padding: 2rem;
+      border: solid 1px;
+      border-radius: 6px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+   
+
+    }
+
   
