--- a/styles/SignUpPage.module.scss
+++ b/styles/SignUpPage.module.scss
@@ -147,4 +147,34 @@
 
     }
 
+    .add-remove-buttons-container {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+
+    .add-remove-button {
+      height: 3.5rem;
+      width: 3.5rem;
+      background-color: var(--primary-blue);
+      color: var(--white);
+      border-radius: 6px;
+      font-size: xx-large;
+
+      &:hover {
+        cursor: pointer;
+        background-color: var(--dark-blue);
+        }
+      
+    }
+
+    .goal-info-text {
+      display: flex;
+      margin-top: 1.5rem;
+      margin-bottom: 4rem;
+      padding: 2rem;
+      border: solid 1px;
+      border-radius: 6px;
+    }
+
 
