added font size to goal number

--- a/styles/SignUpPage.module.scss
+++ b/styles/SignUpPage.module.scss
@@ -147,6 +147,10 @@
 
     }
 
+    .goal-number {
+      font-size: xx-large
+    }
+
     .add-remove-buttons-container {
       display: flex;
       flex-direction: column;
