email validation and bubble images for login page

--- a/styles/SignUpPage.module.scss
+++ b/styles/SignUpPage.module.scss
@@ -1,5 +1,6 @@
 .root {
     height: var(--app-height);
+    position: relative;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -7,16 +8,11 @@
     flex-direction: column;
     gap: 10rem;
     padding: 2rem;
+    overflow: hidden;
  
   
     @media(max-width: 1550px) {
       gap: 4rem;
-    }
-  
-    @media(max-width: 1200px) {
-      gap: 0;
-      flex-direction: column;
-      justify-content: space-between;
     }
   
     @media(max-width: 470px) {
@@ -30,26 +26,75 @@
     top: 2rem;
     left: 3rem;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     gap: .5rem; 
-
-    @media(max-width: 1200px) {
-      position: unset;
-      order: -1;
-    }
+    cursor: pointer;
   
-    @media(max-width: 640px) {
-      flex-direction: column;
-      gap: 1rem;
+    @media(max-width: 560px) {
+      left: 1.5rem;
     }
+}
+
+.form-container {
+  z-index: 1;
+  max-width: 30rem;
+
+  h1 {
+    line-height: 1rem;
+    font-size: 2.2rem;
+  }
+
+  p {
+    font-size: 1rem;
+    font-weight: 100;
+    line-height: 1.4rem;
+  }
+
+  button {
+    @media (max-width: 640px) {
+      position: absolute;
+      bottom: 2rem;
+      left: 50%;
+      transform: translateX(-50%);
+      width: calc(100% - 3rem);
+      max-width: 30rem;
+    }
+  }
+}
+
+.policy {
+  text-align: center;
+  font-size: .8rem !important;
+
+  .text-overlay{
+    color: var(--primary-blue);
+  }
 }
 
 .inputfield {
     width: 100%;
-    padding: 1rem 2rem;
+    padding: 1rem 0rem;
     border: none;
     border-radius: 6px;
     margin-top: 0.25rem;
+
+    label {
+      margin-left: .2rem;
+      font-size: .8rem;
+    }
+
+    input {
+      width: 100%;
+      border-radius: 6px;
+      padding: 1rem;
+      margin-top: .2rem;
+      font-size: 1.1rem;
+      border: none;
+
+      &:focus {
+        outline: 2px solid var(--primary-blue);
+      }
+    }
 }
 
 .logout-button {
@@ -76,7 +121,7 @@
 
 }
 
-.sign-in-button {
+.login-button {
     margin-top: 2rem;
     padding: 1rem 2rem;
     width: 100%;
@@ -90,13 +135,16 @@
     transition: 250ms;
     border: none;
     justify-content: center;
-    
 
-    &:hover {
+    &.active {
+      background-color: var(--primary-blue);
+
+      &:hover {
         cursor: pointer;
         background-color: var(--dark-blue);
-        }
+      }
     }
+}
 
     .confirm-container {
       display: flex;
@@ -143,8 +191,6 @@
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
-   
-
     }
 
     .goal-number {
@@ -181,4 +227,51 @@
       border-radius: 6px;
     }
 
+.bubbleOne {
+  position: absolute;
+  top: 60%;
+  right: 80%;
+
+  @media (max-width: 1920px) {
+    right: 70%;
+  }
+
+  @media (max-width: 640px) {
+    width: 165px;
+    height: auto;
+    top: 67%;
+    right: 79%;
+    opacity: .4;
+  }
+}
+
+.bubbleTwo {
+  position: absolute;
+  bottom: 80%;
+  left: 70%;
+  height: auto;
+  width: 400px;
+
+  @media (max-width: 640px) {
+    width: 400px;
+    left: 50%;
+    bottom: 70%;
+    opacity: .4;
+  }
+}
+
+.bubbleThree {
+  position: absolute;
+  top: 80%;
+  right: 10%;
+  height: auto;
+  width: 150px;
+  
+  @media (max-width: 640px) {
+    width: 65px;
+    top: 75%;
+    left: 75%;
+    opacity: .4;
+  }
+}
 
