mera error fix vid validering

--- a/styles/SignUpPage.module.scss
+++ b/styles/SignUpPage.module.scss
@@ -94,6 +94,10 @@
       &:focus {
         outline: 2px solid var(--primary-blue);
       }
+
+      &.invalid {
+        outline: 2px solid var(--error-red);
+      }
     }
 }
 
