--- a/styles/UserBoard.module.scss
+++ b/styles/UserBoard.module.scss
@@ -5,6 +5,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  @media (max-width: 1023px) {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 3rem;
+    overflow-y: auto;
+  }
 }
 
 .data-field {
@@ -17,6 +25,10 @@
   align-items: center;
   gap: 2rem;
   padding: 2rem;
+
+  @media (max-width: 1023px) {
+    margin-top: 6rem;
+  }
 
   .name {
     width: 100%;
@@ -43,6 +55,10 @@
     max-height: 30rem;
     gap: 1.5rem;
 
+    @media (max-width: 1023px) {
+      height: 20rem;
+    }
+
     .percentage {
       display: flex;
       flex-direction: column;
@@ -58,6 +74,11 @@
         font-size: 7rem;
         line-height: 0;
         margin: 3.5rem 0;
+
+        @media(max-width: 1180px) {
+          font-size: 5rem;
+          margin: 2.5rem 1rem;
+        }
       }
     }
 
@@ -82,6 +103,10 @@
           font-size: 2.3rem;
           line-height: 0;
           margin: 1rem 0;
+
+          @media(max-width: 1180px) {
+            font-size: 1.8rem;
+          }
         }
 
         p {
@@ -94,6 +119,10 @@
   .curiosa {
     text-align: center;
     max-width: 35rem;
+
+    @media (max-width: 1023px) {
+      display: none;
+    }
 
     p:first-child {
       font-weight: 700;
@@ -120,6 +149,13 @@
   justify-content: flex-start;
   gap: 2rem;
 
+  @media (max-width: 1023px) {
+    width: 100%;
+    border-top-left-radius: 1.5rem;
+    border-top-right-radius: 1.5rem;
+    border-bottom-left-radius: 0;
+  }
+
   .menu {
     border: 1px solid var(--white);
     padding: .6rem;
@@ -133,11 +169,22 @@
       border-color: var(--dark-blue);
       cursor: pointer;
     }
+
+    @media (max-width: 1023px) {
+      top: 2rem;
+      right: 2.5rem;
+    }
   }
 
   .add-intake-container {
     width: 100%;
     margin-top: 6rem;
+
+    @media (max-width: 1023px) {
+      margin-top: 0;
+      overflow-y: auto;
+      overflow-x: hidden;
+    }
 
     p {
       margin-left: .5rem;
@@ -149,6 +196,13 @@
       align-items: center;
       justify-content: center;
       gap: .6rem;
+
+      @media (max-width: 1023px) {
+        justify-content: flex-start;
+        flex-wrap: nowrap;
+        width: 100px;
+        height: 100%;
+      }
       
       button {
         width: 8rem;
@@ -163,6 +217,89 @@
         &:hover {
           background-color: var(--dark-blue);
           cursor: pointer;
+        }
+      }
+    }
+  }
+
+  .history-title {
+    width: 100%;
+    margin-left: .5rem;
+    margin-bottom: -.8rem;
+  }
+
+  .history-container {
+    width: 100%;
+    overflow-y: auto;
+    padding-right: .5rem;
+
+    @media(max-width: 1023px) {
+      overflow-y:visible;
+      padding-bottom: 2rem;
+    }
+
+    ul {
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      margin: 0;
+
+      li {
+        border-radius: 6px;
+        padding: 1rem;
+        width: 100%;
+        background-color: var(--card-bg);
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 1rem;
+
+        .date {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          border-right: 1px solid var(--border-grey);
+          padding-right: 1rem;
+
+          .day {
+            font-size: 1.4rem !important;
+            font-weight: bold;
+          }
+          
+          p {
+            font-size: .8rem;
+            line-height: 0px;
+            margin: .7rem;
+          }
+        }
+
+        .history-intake {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          margin-right: auto;
+
+          p {
+            line-height: 0;
+            margin: .8rem;
+
+            &:first-child {
+              color: var(--border-grey);
+              font-size: .8rem;
+            }
+
+            
+            &:last-child {
+              font-size: 1.4rem;
+            }
+          }
+        }
+
+        .icon-indicator {
+          padding: 1.2rem 1.4rem;
+          background-color: var(--bg);
+          border-radius: 6px;
         }
       }
     }
