--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,6 +45,22 @@ body {
   @media not all and (hover:hover) {
     height: var(--app-height);
   }
+
+  scrollbar-color: blue white;
+  scrollbar-width: thin;
+}
+
+/* WebKit and Chromiums */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  background-color: var(--card-bg);
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #2f3e54;
+  border-radius: 5px;
 }
 
 button {
@@ -53,4 +69,8 @@ button {
 
 a {
   text-decoration: none;
+}
+
+li {
+  list-style: none;
 }
