--- a/styles/UserBoard.module.scss
+++ b/styles/UserBoard.module.scss
@@ -12,6 +12,11 @@
     align-items: flex-start;
     gap: 3rem;
     overflow-y: auto;
+    height: min-content;
+  }
+
+  @media (max-width: 640px) {
+    gap: 1rem;
   }
 }
 
@@ -30,6 +35,14 @@
     margin-top: 6rem;
   }
 
+  @media (max-width: 640px) {
+    margin-top: -.9rem;
+  }
+
+  @media (max-width: 460px) {
+    padding: 2rem 1.2rem;
+  }
+
   .name {
     width: 100%;
     max-width: 45rem;
@@ -45,6 +58,13 @@
       font-weight: 100;
       line-height: 1rem;
     }
+
+    @media (max-width: 640px) {
+      h1 {
+        font-size: 1.8rem;
+        margin-bottom: 0;
+      }
+    }
   }
 
   .intake-data {
@@ -55,8 +75,12 @@
     max-height: 30rem;
     gap: 1.5rem;
 
-    @media (max-width: 1023px) {
+    @media(max-width: 1180px) {
       height: 20rem;
+    }
+
+    @media(max-width: 640px) {
+      height: 14rem;
     }
 
     .percentage {
@@ -78,6 +102,11 @@
         @media(max-width: 1180px) {
           font-size: 5rem;
           margin: 2.5rem 1rem;
+        }
+
+        @media(max-width: 640px) {
+          font-size: 4rem;
+          margin: 1.5rem 1rem;
         }
       }
     }
@@ -107,6 +136,10 @@
           @media(max-width: 1180px) {
             font-size: 1.8rem;
           }
+
+          @media(max-width: 640px) {
+            font-size: 1.5rem;
+          }
         }
 
         p {
@@ -135,6 +168,7 @@
 }
 
 .interaction-field {
+  position: relative;
   z-index: 2;
   width: 30rem;
   flex-shrink: 0;
@@ -156,24 +190,8 @@
     border-bottom-left-radius: 0;
   }
 
-  .menu {
-    border: 1px solid var(--white);
-    padding: .6rem;
-    border-radius: 6px;
-    position: absolute;
-    right: 2rem;
-    transition: 250ms;
-
-    &:hover {
-      background-color: var(--dark-blue);
-      border-color: var(--dark-blue);
-      cursor: pointer;
-    }
-
-    @media (max-width: 1023px) {
-      top: 2rem;
-      right: 2.5rem;
-    }
+  @media (max-width: 460px) {
+    padding: 2rem 1.2rem;
   }
 
   .add-intake-container {
@@ -181,9 +199,21 @@
     margin-top: 6rem;
 
     @media (max-width: 1023px) {
-      margin-top: 0;
-      overflow-y: auto;
-      overflow-x: hidden;
+      position: absolute;
+      top: -.5rem;
+      overflow-x: scroll;
+      width: 100%;
+      padding-left: 2rem;
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
+
+    @media (max-width: 460px) {
+      padding-left: 1.2rem;
     }
 
     p {
@@ -198,10 +228,10 @@
       gap: .6rem;
 
       @media (max-width: 1023px) {
-        justify-content: flex-start;
-        flex-wrap: nowrap;
-        width: 100px;
-        height: 100%;
+        flex: none;
+        width: 100%;
+        display: inline-block;
+        white-space: nowrap;
       }
       
       button {
@@ -214,6 +244,10 @@
         font-size: 1.1rem;
         transition: 250ms;
 
+        @media (max-width: 1023px) {
+          margin-right: .8rem;
+        }
+
         &:hover {
           background-color: var(--dark-blue);
           cursor: pointer;
@@ -222,10 +256,28 @@
     }
   }
 
+  .add-intake-title {
+    width: 100%;
+    margin-left: .5rem;
+    position: relative;
+    top: 7rem;
+
+    @media(max-width: 1023px) {
+      position: initial;
+    }
+  }
+
   .history-title {
     width: 100%;
     margin-left: .5rem;
-    margin-bottom: -.8rem;
+    position: relative;
+    top: 1rem;
+
+    @media(max-width: 1023px) {
+      position: initial;
+      margin-top: 5rem;
+      margin-bottom: -.5rem;
+    }
   }
 
   .history-container {
@@ -234,8 +286,8 @@
     padding-right: .5rem;
 
     @media(max-width: 1023px) {
-      overflow-y:visible;
-      padding-bottom: 2rem;
+      overflow-y: visible;
+      padding-right: 0;
     }
 
     ul {
@@ -254,6 +306,10 @@
         align-items: center;
         justify-content: flex-start;
         gap: 1rem;
+
+        @media(max-width: 460px) {
+          position: relative;
+        }
 
         .date {
           display: flex;
@@ -300,6 +356,17 @@
           padding: 1.2rem 1.4rem;
           background-color: var(--bg);
           border-radius: 6px;
+
+          @media(max-width: 420px) {
+            position: absolute;
+            top: .6rem;
+            right: .6rem;
+            padding: .3rem .4rem .1rem .5rem;
+          }
+
+          @media(max-width: 370px) {
+            display: none;
+          }
         }
       }
     }
@@ -319,6 +386,38 @@
     height: auto;
     width: 1300px;
   }
+
+  @media (max-width: 1023px) {
+    width: 1000px;
+    bottom: 65%;
+    left: 40%;
+  }
+
+  @media (max-width: 640px) {
+    width: 600px;
+    bottom: 70%;
+    left: 15%;
+    opacity: .6;
+  }
+}
+
+.menu {
+  position: absolute;
+  z-index: 3;
+  border: 1px solid var(--white);
+  padding: .6rem;
+  border-radius: 6px;
+  position: absolute;
+  right: 2rem;
+  transition: 250ms;
+  top: 2rem;
+  right: 2.5rem;
+
+  &:hover {
+    background-color: var(--dark-blue);
+    border-color: var(--dark-blue);
+    cursor: pointer;
+  }
 }
 
 .bubbleTwo {
@@ -328,6 +427,10 @@
   height: auto;
   width: 500px;
   opacity: .25;
+
+  @media(max-width: 1023px) {
+    display: none;
+  }
 }
 
 .logo-container {
@@ -335,4 +438,8 @@
   top: 2rem;
   left: 3rem;
   cursor: pointer;
+
+  @media(max-width: 640px) {
+    display: none;
+  }
 }
