--- a/styles/SignUpPage.module.scss
+++ b/styles/SignUpPage.module.scss
@@ -105,7 +105,7 @@
   margin-top: 2rem;
   padding: 1rem 2rem;
   width: 100%;
-  background-color: var(--primary-blue);
+  background-color: var(--inactive-blue);
   justify-content: center;
   color: var(--white);
   font-size: 1.1rem;
@@ -114,6 +114,12 @@
   display: flex;
   border-radius: 6px;
   transition: 250ms;
+
+  &:hover {
+    cursor: pointer;
+    background-color: var(--primary-blue);
+  }
+
 }
 
 .logout-button {
