--- a/styles/ConfirmationPage.module.scss
+++ b/styles/ConfirmationPage.module.scss
@@ -1,26 +1,24 @@
 .root {
-    height: var(--app-height);
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10rem;
-    padding: 2rem;
-  
-    @media(max-width: 1550px) {
-      gap: 4rem;
-    }
-  
-    @media(max-width: 1200px) {
-      gap: 0;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-  
-    @media(max-width: 470px) {
-      padding: 2rem 1.5rem 3rem 1.5rem;
-    }
+  height: var(--app-height);
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10rem;
+  padding: 2rem;
+  overflow: hidden;
+
+
+  @media(max-width: 1550px) {
+    gap: 4rem;
   }
+
+  @media(max-width: 470px) {
+    padding: 2rem 1.5rem 3rem 1.5rem;
+  }
+}
 
   .logo-container-sign-up {
     z-index: 1;
@@ -28,17 +26,48 @@
     top: 2rem;
     left: 3rem;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     gap: .5rem; 
+    cursor: pointer;
+  
+    @media(max-width: 560px) {
+      left: 1.5rem;
+    }
+}
 
-    @media(max-width: 1200px) {
-        position: unset;
-        order: -1;
-      }
-    
-      @media(max-width: 640px) {
-        flex-direction: column;
-        gap: 1rem;
-      }
+.confirm-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+
+  .confirm-h1 {
+    display: flex;
+
   }
+
+.confirm-text-container {
+  padding: 2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 2.5rem;
+  border-radius: 6px;
+  background-color: #263245;
+
+  
+}
+
+  @media(max-width: 1200px) {
+    position: unset;
+    order: -1;
+  }
+
+  @media(max-width: 640px) {
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
 
