--- a/styles/GoalPage.module.scss
+++ b/styles/GoalPage.module.scss
@@ -1,55 +1,77 @@
 .root {
-    height: var(--app-height);
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 10rem;
-    padding: 2rem;
- 
-  
-    @media(max-width: 1550px) {
-      gap: 4rem;
-    }
-  
-    @media(max-width: 1200px) {
-      gap: 0;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-  
-    @media(max-width: 470px) {
-      padding: 2rem 1.5rem 3rem 1.5rem;
-    }
+  height: var(--app-height);
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10rem;
+  padding: 2rem;
+  overflow: hidden;
+
+
+  @media(max-width: 1550px) {
+    gap: 4rem;
   }
 
-
-  .logo-container-sign-up {
-    z-index: 1;
-    position: absolute;
-    top: 2rem;
-    left: 3rem;
-    display: flex;
-    justify-content: start;
-    gap: .5rem; 
-
-    @media(max-width: 1200px) {
-      position: unset;
-      order: -1;
-    }
-  
-    @media(max-width: 640px) {
-      flex-direction: column;
-      gap: 1rem;
-    }
+  @media(max-width: 470px) {
+    padding: 2rem 1.5rem 3rem 1.5rem;
+  }
 }
 
-.logout-button {
+.logo-container-sign-up {
+  z-index: 1;
+  position: absolute;
+  top: 2rem;
+  left: 3rem;
+  display: flex;
+  justify-content: flex-start;
+  gap: .5rem; 
+  cursor: pointer;
+
+  @media(max-width: 560px) {
+    left: 1.5rem;
+  }
+}
+
+
+.inputfield {
+  width: 100%;
+  padding: 1rem 0rem;
+  border: none;
+  border-radius: 6px;
+  margin-top: 0.25rem;
+
+  label {
+    margin-left: .2rem;
+    font-size: .8rem;
+  }
+
+  input {
+    width: 100%;
+    border-radius: 6px;
+    padding: 1rem;
+    margin-top: .2rem;
+    font-size: 1.1rem;
+    border: none;
+
+    &:focus {
+      outline: 2px solid var(--primary-blue);
+    }
+
+    &.invalid {
+      outline: 2px solid var(--error-red);
+    }
+  }
+}
+
+.sign-in-button {
   margin-top: 2rem;
   padding: 1rem 2rem;
   width: 100%;
-  background-color: var(--primary-blue);
+  background-color: var(--inactive-blue);
+  justify-content: center;
   color: var(--white);
   font-size: 1.1rem;
   letter-spacing: 1px;
@@ -57,49 +79,79 @@
   display: flex;
   border-radius: 6px;
   transition: 250ms;
-  border: none;
+
+  &:hover {
+    cursor: pointer;
+    background-color: var(--primary-blue);
+  }
+
+}
+
+.logout-button {
+  margin-top: 2rem;
+  padding: 1rem 2rem;
+  width: 100%;
+  background-color: transparent;
+  border: solid 1px;
+  color: var(--white);
+  font-size: 1.1rem;
+  letter-spacing: 1px;
+  font-weight: 500;
+  display: flex;
+  border-radius: 6px;
+  transition: 250ms;
+
   justify-content: center;
 
   &:hover {
     cursor: pointer;
     background-color: var(--dark-blue);
+    color: var(--white);
     }
 
 }
 
-.sign-in-button {
-    margin-top: 2rem;
-    padding: 1rem 2rem;
-    width: 100%;
-    background-color: var(--inactive-blue);
-    color: var(--white);
-    font-size: 1.1rem;
-    letter-spacing: 1px;
-    font-weight: 500;
-    display: flex;
-    border-radius: 6px;
-    transition: 250ms;
-    border: none;
-    justify-content: center;
-    
+.goal-container {
+  margin-top: 2rem;
+  padding: 2rem;
+  border: solid 1px;
+  border-radius: 6px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
 
-    &:hover {
-        cursor: pointer;
-        background-color: var(--dark-blue);
-        }
+.goal-number {
+  font-size: xx-large
+}
+
+.add-remove-buttons-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.add-remove-button {
+  height: 3.5rem;
+  width: 3.5rem;
+  background-color: var(--primary-blue);
+  color: var(--white);
+  border-radius: 6px;
+  font-size: xx-large;
+
+  &:hover {
+    cursor: pointer;
+    background-color: var(--dark-blue);
     }
-
-    .goal-container {
-      margin-top: 2rem;
-      padding: 2rem;
-      border: solid 1px;
-      border-radius: 6px;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-between;
-   
-
-    }
-
   
+}
+
+.goal-info-text {
+  display: flex;
+  margin-top: 1.5rem;
+  margin-bottom: 4rem;
+  padding: 2rem;
+  border: solid 1px;
+  border-radius: 6px;
+}
