switched to a better name for different divs etc

--- a/styles/GoalPage.module.scss
+++ b/styles/GoalPage.module.scss
@@ -20,7 +20,7 @@
   }
 }
 
-.logo-container-sign-up {
+.logo-container-save-goal {
   z-index: 1;
   position: absolute;
   top: 2rem;
@@ -66,7 +66,7 @@
   }
 }
 
-.sign-in-button {
+.save-goal-button {
   margin-top: 2rem;
   padding: 1rem 2rem;
   width: 100%;
@@ -87,7 +87,7 @@
 
 }
 
-.logout-button {
+.logout-button-save-goal {
   margin-top: 2rem;
   padding: 1rem 2rem;
   width: 100%;
