--- a/styles/UserBoard.module.scss
+++ b/styles/UserBoard.module.scss
@@ -468,7 +468,7 @@
 
 .menu {
   position: absolute;
-  z-index: 3;
+  z-index: 6;
   border: 1px solid var(--white);
   padding: .6rem;
   border-radius: 6px;
@@ -511,4 +511,12 @@
   @media(max-width: 640px) {
     display: none;
   }
+}
+
+.modal {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: 4;
+  background-color: rgba(0, 0, 0, 0.699);
 }
