dynamic history updates

--- a/styles/UserBoard.module.scss
+++ b/styles/UserBoard.module.scss
@@ -502,6 +502,11 @@
   }
 }
 
+.no-history {
+  color: var(--border-grey);
+  margin: 0;
+}
+
 .logo-container {
   position: absolute;
   top: 2rem;
