--- a/styles/Menu.module.scss
+++ b/styles/Menu.module.scss
@@ -13,6 +13,11 @@
     &.active {
         right: 0;
     }
+
+    @media(max-width: 480px) {
+        border-radius: 0;
+        width: 100%;    
+    }
 }
 
 .ul-container {
@@ -26,6 +31,10 @@
     gap: 1.5rem;
     margin-bottom: auto;
     cursor: pointer;
+
+    @media(max-width: 480px) {
+        left: 30%;   
+    }
     
     a {
         color: var(--white);
@@ -75,6 +84,11 @@
     font-size: 1.4rem;
     cursor: pointer;
     transition: 250ms;
+
+    @media(max-width: 480px) {
+        left: 30%;  
+        bottom: 3rem; 
+    }
 
     svg {
         path {
