--- a/styles/ProfilePage.module.scss
+++ b/styles/ProfilePage.module.scss
@@ -121,7 +121,6 @@
   border: solid 1px var(--border-grey);
 
   .goal-number {
-
     h2 {
       font-size: 5rem;
       margin: 0;
@@ -178,6 +177,7 @@
 }
 
 .save-button {
+  position: relative;
   padding: 1rem 2rem;
   width: 100%;
   background-color: var(--inactive-blue);
@@ -198,6 +198,20 @@
       cursor: pointer;
       background-color: var(--dark-blue);
     }
+
+    &.is-loading {
+      background-color: transparent;
+    }
+  }
+
+  .animation{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    width: 65px;
+    height: auto;
+    margin-top: 2rem;
   }
 
   @media(max-width: 470px) {
