--- a/styles/LandingPage.module.scss
+++ b/styles/LandingPage.module.scss
@@ -35,27 +35,23 @@
     position: unset;
     order: -1;
   }
-
-  @media(max-width: 640px) {
-    flex-direction: column;
-    gap: 1rem;
-  }
 }
 
 .text-container {
   margin-left: 7rem;
   flex-shrink: 0;
   z-index: 2;
+
   h1 {
-    line-height: 1rem;
     font-size: 2.2rem;
+    margin: 0;
   }
 
   p {
     max-width: 25rem;
     font-size: 1rem;
     font-weight: 100;
-    line-height: 1.6rem;
+    line-height: 1.5rem;
   }
 
   button {
@@ -116,10 +112,6 @@
   }
 
   @media(max-width: 470px) {
-    h1 {
-      font-size: 1.8rem;
-    }
-
     button {
       font-weight: 500;
       letter-spacing: 0;
@@ -127,7 +119,7 @@
     }
   }
 
-  @media(max-width: 400px) {
+  @media(max-width: 430px) {
     h1 {
       font-size: 1.5rem;
     }
@@ -144,7 +136,7 @@
 
   @media(max-width: 1200px) {
     position: absolute;
-    top: 45%;
+    top: 40%;
     left: 50%;
     translate: -50% -50%;
   }
