--- a/styles/ProfilePage.module.scss
+++ b/styles/ProfilePage.module.scss
@@ -119,14 +119,18 @@
   justify-content: space-between;
   border: solid 1px var(--border-grey);
 
+  @media(max-width: 420px) {
+    padding: 1.5rem;
+  }
+
   .goal-number {
     h2 {
       font-size: 5rem;
       margin: 0;
       margin-top: -.4rem;
 
-      @media(max-width: 375px) {
-        font-size: 4.5rem;
+      @media(max-width: 390px) {
+        font-size: 4rem;
       }
     }
 
