--- a/styles/UserBoard.module.scss
+++ b/styles/UserBoard.module.scss
@@ -57,6 +57,7 @@
       font-size: 1rem;
       font-weight: 100;
       line-height: 1rem;
+      color: var(--text-grey);
     }
 
     @media (max-width: 640px) {
@@ -101,7 +102,7 @@
 
       svg{
         scale: 150%;
-        margin-bottom: 1rem;
+        margin-bottom: 1.4rem;
 
         @media(max-width: 640px) {
           scale: 100%;
@@ -135,7 +136,7 @@
       }
 
       p {
-        color: var(--light-grey);
+        color: var(--border-grey);
 
         @media(max-width: 460px) {
           font-size: .9rem;
@@ -218,11 +219,14 @@
     }
 
     p:first-child {
-      font-weight: 700;
+      color: var(--white);
+      font-size: 1.1rem;
+      margin-bottom: -.5rem;
     }
 
     p:last-child {
-      line-height: 1.4rem;
+      line-height: 1.5rem;
+      color: var(--text-grey);
     }
   }
 }
@@ -403,11 +407,11 @@
 
           p {
             line-height: 0;
-            margin: .8rem;
+            margin: .9rem .8rem;
 
             &:first-child {
               color: var(--border-grey);
-              font-size: .8rem;
+              font-size: .9rem;
             }
 
             
@@ -422,11 +426,15 @@
           background-color: var(--bg);
           border-radius: 6px;
 
-          @media(max-width: 420px) {
+          @media(max-width: 405px) {
             position: absolute;
             top: .6rem;
             right: .6rem;
             padding: .3rem .4rem .1rem .5rem;
+
+            svg {
+              scale: 75%;
+            }
           }
 
           @media(max-width: 355px) {
