--- a/styles/GoalPage.module.scss
+++ b/styles/GoalPage.module.scss
@@ -20,19 +20,54 @@
   }
 }
 
-.logo-container-save-goal {
+.logo-container {
   z-index: 1;
   position: absolute;
   top: 2rem;
-  left: 3rem;
+  left: 2.5rem;
   display: flex;
   justify-content: flex-start;
-  gap: .5rem; 
+  align-items: center;
+  gap: 1rem; 
   cursor: pointer;
 
-  @media(max-width: 560px) {
-    left: 1.5rem;
+  @media(max-width: 640px) {
+    display: none;
   }
+}
+
+.title {
+  h2 {
+    font-size: 2.5rem;
+    margin: 0;
+  }
+
+  p {
+    margin-top: .2rem;
+  }
+
+  @media(max-width: 470px) {
+    position: absolute;
+    top: 1.5rem;
+    left: 1.5rem;
+    z-index: 3;
+
+    h2{
+      font-size: 2rem;
+    }
+
+    p {
+      font-size: .9rem;
+    }
+  }
+}
+
+.wrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  z-index: 3;
 }
 
 
@@ -42,6 +77,10 @@
   border: none;
   border-radius: 6px;
   margin-top: 0.25rem;
+
+  @media(max-width: 375px) {
+    margin-top: 2rem;
+  }
 
   label {
     margin-left: .2rem;
@@ -66,7 +105,79 @@
   }
 }
 
+.goal-container {
+  margin-top: 1.1rem;
+  padding: 2rem;
+  border: solid 1px;
+  border-radius: 6px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border: solid 1px var(--border-grey);
+
+  @media(max-width: 420px) {
+    padding: 1.5rem;
+  }
+
+  .goal-number {
+    h2 {
+      font-size: 5rem;
+      margin: 0;
+      margin-top: -.4rem;
+
+      @media(max-width: 390px) {
+        font-size: 4rem;
+      }
+    }
+
+    p {
+      margin: 0;
+      margin-left: .3rem;
+      font-size: 1.2rem;
+    }
+  }
+
+  .add-remove-buttons-container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    
+    .add-remove-button {
+      border: none;
+      height: 3.5rem;
+      width: 3.5rem;
+      background-color: var(--primary-blue);
+      color: var(--white);
+      border-radius: 6px;
+      font-size: xx-large;
+    
+      &:hover {
+        cursor: pointer;
+        background-color: var(--dark-blue);
+        }
+    }
+  }
+}
+
+.info-text {
+  display: flex;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  padding: 1rem 2rem;
+  border: solid 1px var(--border-grey);
+  border-radius: 6px;
+  max-width: 26rem;
+
+  p {
+    font-size: .9rem;
+    line-height: 20px;
+    color: var(--light-grey);
+  }
+}
+
 .save-button {
+  position: relative;
   padding: 1rem 2rem;
   width: 100%;
   background-color: var(--inactive-blue);
@@ -80,6 +191,10 @@
   border: none;
   justify-content: center;
 
+  p {
+    margin: 0;
+  }
+
   &.active {
     background-color: var(--primary-blue);
 
@@ -87,6 +202,35 @@
       cursor: pointer;
       background-color: var(--dark-blue);
     }
+  }
+
+  &.is-loading {
+    transition: 0ms;
+    background-color: transparent;
+
+    &:hover {
+      background-color: transparent;
+      cursor: initial;
+    }
+    
+    p{
+      opacity: 0;
+    }
+
+    .animation {
+      opacity: 1;
+    }
+  }
+
+  .animation{
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    translate: -50% -50%;
+    width: 65px;
+    height: auto;
+    margin-top: 2rem;
   }
 
   @media(max-width: 470px) {
@@ -98,49 +242,24 @@
   }
 }
 
-.goal-container {
-  margin-top: 2rem;
-  padding: 2rem;
-  border: solid 1px;
-  border-radius: 6px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
+.error {
+  display: block;
+  opacity: 0;
+  font-size: .8rem;
 
-.goal-number {
-  font-size: xx-large
-}
+  &.invalid {
+    opacity: 1;
+    color: var(--error-red);
+    width: 100%;
+  }
 
-.add-remove-buttons-container {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-}
-
-.add-remove-button {
-  height: 3.5rem;
-  width: 3.5rem;
-  background-color: var(--primary-blue);
-  color: var(--white);
-  border-radius: 6px;
-  font-size: xx-large;
-
-  &:hover {
-    cursor: pointer;
-    background-color: var(--dark-blue);
-    }
-  
-}
-
-.goal-info-text {
-  display: flex;
-  margin-top: 1.5rem;
-  margin-bottom: 4rem;
-  padding: 2rem;
-  border: solid 1px;
-  border-radius: 6px;
+  @media(max-width: 470px) {
+    text-align: center;
+    position: absolute;
+    bottom: 5.5rem;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
 
 .bubbleOne {
