--- a/styles/UserBoard.module.scss
+++ b/styles/UserBoard.module.scss
@@ -266,6 +266,21 @@
     width: 100%;
     margin-top: 4rem;
 
+    .iconbtn {
+      position: relative;
+
+      @media(max-width: 1023px) {
+        top: -.32rem;
+      }
+
+      svg {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        translate: -50% -50%;
+      }
+    }
+
     @media (max-width: 1023px) {
       position: absolute;
       top: -.5rem;
@@ -315,6 +330,7 @@
 
         @media (max-width: 1023px) {
           margin-right: .8rem;
+      
         }
 
         &:hover {
