--- a/styles/GoalPage.module.scss
+++ b/styles/GoalPage.module.scss
@@ -155,7 +155,11 @@
       &:hover {
         cursor: pointer;
         background-color: var(--dark-blue);
-        }
+      }
+
+      &:active {
+        transform: translateY(4px);
+      }
     }
   }
 }
